Update upgrade-guide.mdx (#1010)

--- a/src/pages/docs/upgrade-guide.mdx
+++ b/src/pages/docs/upgrade-guide.mdx
@@ -106,7 +106,7 @@ You can also safely remove this key if it's currently set to `false`:
 
 ```diff-js tailwind.config.js
   module.exports = {
--   darkMode: 'false',
+-   darkMode: false,
     // ...
   }
 ```
