Fix broken links

--- a/src/pages/docs/reusing-styles.mdx
+++ b/src/pages/docs/reusing-styles.mdx
@@ -118,10 +118,10 @@ You could even rewrite the navigation example using a loop or `map` if you prefe
   <div class="sm:px-8 flex sm:justify-center">
     <div class="bg-white px-6 py-4 shadow">
       <nav class="flex justify-center space-x-4">
-        <a href="/dashboard" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Home</a>
-        <a href="/team" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Team</a>
-        <a href="/projects" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Projects</a>
-        <a href="/reports" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Reports</a>
+        <a href="#/dashboard" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Home</a>
+        <a href="#/team" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Team</a>
+        <a href="#/projects" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Projects</a>
+        <a href="#/reports" class="rounded-lg px-3 py-2 text-gray-700 font-medium hover:bg-gray-100 hover:text-gray-900">Reports</a>
       </nav>
     </div>
   </div>
