Update customizing-colors.mdx (#1017)
Update links in introduction with correct anchor names.

--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -53,7 +53,7 @@ module.exports = {
 }
 ```
 
-When it comes to building a custom color palette, you can either [configure your own custom colors](#custom-colors) from scratch if you know exactly what you want, or [curate your colors](#curating-colors) from our extensive included color palette if you want a head start.
+When it comes to building a custom color palette, you can either [configure your own custom colors](#using-custom-colors) from scratch if you know exactly what you want, or [curate your colors](#using-the-default-colors) from our extensive included color palette if you want a head start.
 
 ---
 
