Remove duplicated class (#1013)
marker:text-sky-400 is duplicated in the same element:

<ul role="list" class="**marker:text-sky-400** list-disc pl-5 space-y-3 text-gray-500 marker:text-sky-400">

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -553,7 +553,7 @@ Style the counters or bullets in lists using the `marker` modifier:
 </Example>
 
 ```html
-<ul role="list" class="**marker:text-sky-400** list-disc pl-5 space-y-3 text-gray-500 marker:text-sky-400">
+<ul role="list" class="**marker:text-sky-400** list-disc pl-5 space-y-3 text-gray-500">
   <li>5 cups chopped Porcini mushrooms</li>
   <li>1/2 cup of olive oil</li>
   <li>3lb of celery</li>
