--- a/src/pages/docs/text-overflow.mdx
+++ b/src/pages/docs/text-overflow.mdx
@@ -38,14 +38,14 @@ Use `truncate` to truncate overflowing text with an ellipsis (<code>…</code>) 
 <p class="**truncate** ...">...</p>
 ```
 
-### Overflow Ellipsis
+### Ellipsis
 
-Use `overflow-ellipsis` to truncate overflowing text with an ellipsis (<code>…</code>) if needed.
+Use `text-ellipsis` to truncate overflowing text with an ellipsis (<code>…</code>) if needed.
 
 <Example p="none">
   <div class="px-4 sm:px-0">
     <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-700 text-sm leading-6 sm:text-base sm:leading-7">
-      <p class="overflow-ellipsis overflow-hidden">
+      <p class="text-ellipsis overflow-hidden">
         The longest word in any of the major English language dictionaries is <span class="text-gray-900 font-medium">pneumonoultramicroscopicsilicovolcanoconiosis,</span> a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.
       </p>
     </div>
@@ -53,10 +53,10 @@ Use `overflow-ellipsis` to truncate overflowing text with an ellipsis (<code>…
 </Example>
 
 ```html
-<p class="**overflow-ellipsis** overflow-hidden ...">...</p>
+<p class="**text-ellipsis** overflow-hidden ...">...</p>
 ```
 
-### Overflow Clip
+### Clip
 
 Use `text-clip` to truncate the text at the limit of the content area.
 
