Fix underline dotted, wavy example in v3 blog (#1021)

--- a/src/pages/blog/tailwindcss-v3/index.mdx
+++ b/src/pages/blog/tailwindcss-v3/index.mdx
@@ -327,8 +327,8 @@ Now you can change underline colors, thickness, and more:
 <p>
   I’m Derek, an astro-engineer based in Tattooine. I like to build X-Wings at
   <a href="#" class="underline **decoration-sky-500**">My Company, Inc</a>. Outside of
-  work, I like to <a href="#" class="underline **decoration-pink-500**">watch pod-racing</a>
-  and have <a href="#" class="underline **decoration-indigo-500**">light-saber</a>
+  work, I like to <a href="#" class="underline **decoration-pink-500 decoration-dotted**">watch pod-racing</a>
+  and have <a href="#" class="underline **decoration-indigo-500 decoration-wavy**">light-saber</a>
   fights.
 </p>
 ```
