Fixing Star Wars location misspelling! (#1027)
😉 😄

--- a/src/pages/blog/tailwindcss-v3/index.mdx
+++ b/src/pages/blog/tailwindcss-v3/index.mdx
@@ -319,13 +319,13 @@ Now you can change underline colors, thickness, and more:
 
 <Example p="none">
   <div class="bg-white p-8 text-gray-900 shadow-lg max-w-md mx-auto text-sm leading-6 sm:text-base sm:leading-7">
-    <p class="text-base leading-6">I’m Derek, an astro-engineer based in Tattooine. I like to build X-Wings at <a href="#" class="font-semibold text-gray-900 underline decoration-sky-500 decoration-2">My Company, Inc</a>. Outside of work, I like to <a href="#" class="font-semibold text-gray-900 underline decoration-pink-500 decoration-2 decoration-dotted">watch pod-racing</a> and have <a href="#" class="font-semibold text-gray-900 underline decoration-indigo-500 decoration-2 decoration-wavy">light-saber</a> fights.</p>
+    <p class="text-base leading-6">I’m Derek, an astro-engineer based in Tatooine. I like to build X-Wings at <a href="#" class="font-semibold text-gray-900 underline decoration-sky-500 decoration-2">My Company, Inc</a>. Outside of work, I like to <a href="#" class="font-semibold text-gray-900 underline decoration-pink-500 decoration-2 decoration-dotted">watch pod-racing</a> and have <a href="#" class="font-semibold text-gray-900 underline decoration-indigo-500 decoration-2 decoration-wavy">light-saber</a> fights.</p>
   </div>
 </Example>
 
 ```html
 <p>
-  I’m Derek, an astro-engineer based in Tattooine. I like to build X-Wings at
+  I’m Derek, an astro-engineer based in Tatooine. I like to build X-Wings at
   <a href="#" class="underline **decoration-sky-500**">My Company, Inc</a>. Outside of work, I
   like to <a href="#" class="underline **decoration-pink-500 decoration-dotted**">watch pod-racing</a>
   and have <a href="#" class="underline **decoration-indigo-500 decoration-wavy**">light-saber</a>
