Correct text label ("Username" -> "Email") (#1026)

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -374,7 +374,7 @@ When you need to style an element based on the state of a _sibling_ element, mar
 ```html
 <form>
   <label class="block">
-    <span class="block text-sm font-medium text-gray-700">Username</span>
+    <span class="block text-sm font-medium text-gray-700">Email</span>
     <input type="email" class="**peer** ..."/>
     <p class="mt-2 invisible **peer-invalid:visible** text-pink-600 text-sm">
       Please provide a valid email address.
