Update configuration.mdx (#1035)
* Update configuration.mdx

* Update configuration.mdx

--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -131,8 +131,8 @@ The `content` section is where you configure the paths to all of your HTML templ
 ```js tailwind.config.js
 module.exports = {
   content: [
-    './pages/**/*.{html,js}'
-    './components/**/*.{html,js}'
+    './pages/**/*.{html,js}',
+    './components/**/*.{html,js}',
   ],
   // ...
 }
