Fix border color default on preflight page

--- a/src/pages/docs/preflight.mdx
+++ b/src/pages/docs/preflight.mdx
@@ -158,7 +158,7 @@ In order to make it easy to add a border by simply adding the `border` class, Ta
 ::after {
   border-width: 0;
   border-style: solid;
-  border-color: theme('borderColor.default', currentColor);
+  border-color: theme('borderColor.DEFAULT', currentColor);
 }
 ```
 
