--- a/src/pages/blog/tailwindcss-v3/index.mdx
+++ b/src/pages/blog/tailwindcss-v3/index.mdx
@@ -326,9 +326,9 @@ Now you can change underline colors, thickness, and more:
 ```html
 <p>
   I’m Derek, an astro-engineer based in Tatooine. I like to build X-Wings at
-  <a href="#" class="underline **decoration-sky-500**">My Company, Inc</a>. Outside of work, I
-  like to <a href="#" class="underline **decoration-pink-500 decoration-dotted**">watch pod-racing</a>
-  and have <a href="#" class="underline **decoration-indigo-500 decoration-wavy**">light-saber</a>
+  <a href="#" class="underline **decoration-sky-500 decoration-2**">My Company, Inc</a>. Outside of work, I
+  like to <a href="#" class="underline **decoration-pink-500 decoration-dotted decoration-2**">watch pod-racing</a>
+  and have <a href="#" class="underline **decoration-indigo-500 decoration-wavy decoration-2**">light-saber</a>
   fights.
 </p>
 ```
