--- a/src/pages/docs/grid-row.mdx
+++ b/src/pages/docs/grid-row.mdx
@@ -136,4 +136,4 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 ### Arbitrary values
 
-<ArbitraryValues property="grid-row/grid-row-start/grid-row-end" featuredClass="row-span-[span_16_/_span_16]" />
+<ArbitraryValues property="grid-row/grid-row-start/grid-row-end" featuredClass="row-[span_16_/_span_16]" />
