Tweak collapsable section dark mode

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -24,8 +24,8 @@ For example, to apply the `bg-sky-700` class on hover, use the `hover:bg-sky-700
 </button>
 ```
 
-<details className="-mt-2 mb-10 rounded-xl border px-6 py-3 prose open:pb-5">
-  <summary className="font-medium cursor-default select-none text-gray-900">How does this compare to traditional CSS?</summary>
+<details className="-mt-2 mb-10 rounded-xl border px-6 py-3 prose open:pb-5 dark:prose-dark">
+  <summary className="font-medium cursor-default select-none text-gray-900 dark:text-gray-200">How does this compare to traditional CSS?</summary>
 
 When writing CSS the traditional way, a single class name would do different things based on the current state.
 
