Update `<details>` dark mode styles

--- a/src/pages/docs/adding-custom-styles.mdx
+++ b/src/pages/docs/adding-custom-styles.mdx
@@ -195,8 +195,8 @@ For more power, you can also use the `@layer` directive to add styles to Tailwin
 ```
 
 
-<details className="-mt-0 mb-6 rounded-xl border px-6 py-3 prose open:pb-5">
-  <summary className="font-medium cursor-default select-none text-gray-900">Why does Tailwind group styles into "layers"?</summary>
+<details className="-mt-0 mb-6 rounded-xl border px-6 py-3 prose open:pb-5 dark:prose-dark dark:border-gray-800">
+  <summary className="font-medium cursor-default select-none text-gray-900 dark:text-gray-200">Why does Tailwind group styles into "layers"?</summary>
 
 In CSS, the order of the rules in your stylesheet decides which declaration wins when two selectors have the same specificity:
 
