Fix stripes overflow

--- a/src/pages/docs/padding.mdx
+++ b/src/pages/docs/padding.mdx
@@ -87,7 +87,7 @@ Control the vertical padding of an element using the `py-{size}` utilities.
 
 <Example>
   <div class="flex justify-center font-mono text-white text-sm font-bold leading-6">
-    <div class="bg-pink-500 rounded-lg shadow-lg">
+    <div class="bg-pink-500 rounded-lg shadow-lg overflow-hidden">
       <div class="h-8 bg-stripes-white"></div>
       <div class="p-4">py-8</div>
       <div class="h-8 bg-stripes-white"></div>
